--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,3 +4,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --corner-low: 35%;
+    --corner-high: calc(100% - var(--corner-low));
+  }
+  .clipped {
+    clip-path: polygon(0 var(--corner-low),var(--corner-low) 0,100% 0,100% var(--corner-high),var(--corner-high) 100%,0 100%);
+  }
