--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+	<link rel="icon" type="image/png" href="{{ "assets/images/background.png" | relative_url }}"/>
   </head>
   <body>
 	<nav>
