start responsively showing the clipped image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,10 @@
 	</nav>
 	<header class="py-12 max-w-xl mx-auto text-center">
 	  <div class="grid grid-cols-2 place-content-between items-center mb-8 ">
-		<h1 class="text-8xl mb-8">
+		<h1 class="text-8xl text-center md:text-left mb-8">
 	      FiNessi
 	  	</h1>
-			<div class="ml-32 drop-shadow-2xl">
+			<div class="hidden md:block ml-32 drop-shadow-2xl">
 			  <img class="w-32 clipped" src="{{ "/assets/images/background.png" | relative_url }}">
 			</div>
 	  </div>
