--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "de-DE" }}">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <title>{{ page.title }} - {{ site.title }}</title>
-    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-	<link rel="icon" type="image/png" href="{{ "assets/images/background.png" | relative_url }}"/>
-  </head>
-  <body>
+<html lang="{{ site.lang | default: " de-DE" }}">
+
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<title>{{ page.title }} - {{ site.title }}</title>
+	<link rel="stylesheet" href="/assets/css/main.css">
+	<link rel="icon" type="image/png" href="{{ " assets/images/background.png" | relative_url }}" />
+</head>
+
+<body>
 	<nav>
 		<ul class="flex flex-wrap items-center mb-4">
-		    <li>
-			<a href="#" class="mr-4 hover:underline md:mr-6 ">FiNessi</a>
-		    </li>
-		    <li>
-			<a href="#" class="mr-4 hover:underline md:mr-6">Socials</a>
-		    </li>
-		    <li>
-			<a href="#" class="mr-4 hover:underline md:mr-6 ">Projekte</a>
-		    </li>
-		    <li>
-			<a href="#" class="mr-4 hover:underline md:mr-6">Referenzen</a>
-		    </li>
-		    <li>
-			<a href="#" class="mr-4 hover:underline md:mr-6">Service</a>
-		    </li>
+			<li>
+				<a href="#" class="mr-4 hover:underline md:mr-6 ">FiNessi</a>
+			</li>
+			<li>
+				<a href="#" class="mr-4 hover:underline md:mr-6">Socials</a>
+			</li>
+			<li>
+				<a href="#" class="mr-4 hover:underline md:mr-6 ">Projekte</a>
+			</li>
+			<li>
+				<a href="#" class="mr-4 hover:underline md:mr-6">Referenzen</a>
+			</li>
+			<li>
+				<a href="#" class="mr-4 hover:underline md:mr-6">Service</a>
+			</li>
 		</ul>
 	</nav>
 	<header class="py-12 max-w-xl mx-auto text-center">
-	  <div class="grid grid-cols-2 place-content-between items-center mb-8 ">
-		<h1 class="text-8xl text-center md:text-left mb-8">
-	      FiNessi
-	  	</h1>
-			<div class="hidden md:block ml-32 drop-shadow-2xl">
-			  <img class="w-32 clipped" src="{{ "/assets/images/background.png" | relative_url }}">
+		<div class="grid grid-cols-2 place-content-between items-center mb-8 ">
+			<h1 class="text-8xl text-center md:text-left mb-8">
+				FiNessi
+			</h1>
+			<div class="hidden md:flex ml-32 drop-shadow-2xl">
+				<img class="w-48 clipped" src="/assets/images/nessi.jpeg">
 			</div>
-	  </div>
-	  <h2 class="text-2xl">{{ page.title }}</h2>
+		</div>
+		<h2 class="text-2xl">{{ page.title }}</h2>
 	</header>
 	{{ content }}
 	<footer class="mt-4">
 		<nav>
 			<ul class="flex flex-wrap justify-center items-center mb-4">
-			    <li>
-				<a href="#" class="mr-4 hover:underline md:mr-6 ">Kontakt</a>
-			    </li>
-			    <li>
-				<a href="#" class="mr-4 hover:underline md:mr-6">Impressum</a>
-			    </li>
-			    <li>
-				<a href="#" class="mr-4 hover:underline md:mr-6">Datenschutz</a>
-			    </li>
+				<li>
+					<a href="#" class="mr-4 hover:underline md:mr-6 ">Kontakt</a>
+				</li>
+				<li>
+					<a href="#" class="mr-4 hover:underline md:mr-6">Impressum</a>
+				</li>
+				<li>
+					<a href="#" class="mr-4 hover:underline md:mr-6">Datenschutz</a>
+				</li>
 			</ul>
 		</nav>
 	</footer>
-  </body>
+</body>
+
 </html>
