start coloring top

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,26 +10,26 @@
 </head>
 
 <body>
-	<nav>
-		<ul class="flex flex-wrap items-center mb-4">
-			<li>
-				<a href="#" class="mr-4 hover:underline md:mr-6 ">FiNessi</a>
+	<nav class="bg-gradient-to-r from-fuchsia-700 via-fuchsia-700 to-black text-white w-2/3 h-72" style="clip-path: polygon(100% 0, 0 0, 0 100%);">
+		<ul class="flex flex-wrap items-center mb-4 md:pt-2">
+			<li class="mx-8">
+				<a href="#" class="mr-8 hover:underline md:mr-6 ">FiNessi</a>
 			</li>
-			<li>
-				<a href="#" class="mr-4 hover:underline md:mr-6">Socials</a>
+			<li class="mx-8">
+				<a href="#" class="mr-8 hover:underline md:mr-6">Socials</a>
 			</li>
-			<li>
-				<a href="#" class="mr-4 hover:underline md:mr-6 ">Projekte</a>
+			<li class="mx-8">
+				<a href="#" class="mr-8 hover:underline md:mr-6 ">Projekte</a>
 			</li>
-			<li>
-				<a href="#" class="mr-4 hover:underline md:mr-6">Referenzen</a>
+			<li class="mx-8">
+				<a href="#" class="mr-8 hover:underline md:mr-6">Referenzen</a>
 			</li>
-			<li>
-				<a href="#" class="mr-4 hover:underline md:mr-6">Service</a>
+			<li class="mx-8">
+				<a href="#" class="mr-8 hover:underline md:mr-6">Service</a>
 			</li>
 		</ul>
 	</nav>
-	<header class="py-12 max-w-xl mx-auto text-center">
+	<header class="pb-12 pt-0 max-w-xl mx-auto text-center">
 		<div class="grid grid-cols-2 place-content-between items-center mb-8 ">
 			<h1 class="text-8xl text-center md:text-left mb-8">
 				FiNessi
