--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,17 +6,18 @@
 	<meta charset="utf-8">
 	<title>{{ page.title }} - {{ site.title }}</title>
 	<link rel="stylesheet" href="/assets/css/main.css">
-	<link rel="icon" type="image/png" href="{{ " assets/images/background.png" | relative_url }}" />
+	<link rel="icon" type="image/png" href="{{ 'assets/images/background.png' | relative_url }}" />
 </head>
 
 <body>
-	<nav class="bg-gradient-to-r from-fuchsia-700 via-fuchsia-700 to-black text-white w-2/3 h-72" style="clip-path: polygon(100% 0, 0 0, 0 100%);">
+	<nav class="bg-gradient-to-r from-fuchsia-700 via-fuchsia-700 to-black text-white w-2/3 h-72"
+		style="clip-path: polygon(100% 0, 0 0, 0 100%);">
 		<ul class="flex flex-wrap items-center mb-4 md:pt-2">
 			<li class="mx-8">
-				<a href="#" class="mr-8 hover:underline md:mr-6 ">FiNessi</a>
+				<a href="/" class="mr-8 hover:underline md:mr-6 ">FiNessi</a>
 			</li>
 			<li class="mx-8">
-				<a href="#" class="mr-8 hover:underline md:mr-6">Socials</a>
+				<a href="socials.html" class="mr-8 hover:underline md:mr-6">Socials</a>
 			</li>
 			<li class="mx-8">
 				<a href="#" class="mr-8 hover:underline md:mr-6 ">Projekte</a>
