use stone-palette for dark-colours

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div class="relative">
-		<nav class="bg-gradient-to-r from-fuchsia-700 via-fuchsia-700 to-black text-white w-2/3 h-72 absolute top-0 left-0"
+		<nav class="bg-gradient-to-r from-fuchsia-700 via-fuchsia-700 to-stone-900 text-white w-2/3 h-72 absolute top-0 left-0"
 			style="clip-path: polygon(100% 0, 0 0, 0 100%);">
 			<ul class="flex flex-wrap items-center mb-4 md:pt-2">
 				{% for nav_element in site.data.navlinks %}
@@ -35,7 +35,7 @@
 	</div>
 	{{ content }}
 	<footer class="mt-8 relative">
-		<nav class="relative h-64">
+		<nav class="relative bg-stone-900 text-stone-50 h-64">
 			<ul class="flex flex-wrap justify-center items-center mb-4">
 				<li>
 					<a href="#" class="mr-4 hover:underline md:mr-6 ">Kontakt</a>
