added projects page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,11 +65,11 @@
 				style="clip-path: polygon(100% 0%,0% 100%,100% 100%);">
 			</div>
 			<div class="absolute h-64 w-3/4 bottom-0 right-0">
-				<div class="relative pt-36 mr-4 float-right w-72">
+				<div class="relative pt-36 mr-4 float-right w-96">
 					{% for sm_element in site.data.bottomicons %}
 					<a href="{{ sm_element.url }} rel=" me">
 						<img src="{{ sm_element.logo }}" alt="{{ sm_element.name }}"
-							class="w-8 mx-1 rounded-[10px] inline-block bg-white" />
+							class="w-12 mx-1 rounded-xl inline-block bg-white" />
 					</a>
 					{% endfor %}
 				</div>
