--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,17 +48,13 @@
 
 	<footer class="relative transform-none md:skew-y-6 bg-transparent">
 		<div class="transform-none md:-skew-y-6">
-			<nav class="relative bg-stone-900 text-stone-50 h-64 ">
-				<ul class="flex flex-wrap justify-center items-center mb-4">
-					<li>
-						<a href="#" class="mr-4 hover:underline md:mr-6 ">Kontakt</a>
+			<nav class="relative bg-stone-900 text-stone-50 h-64">
+				<ul class="flex flex-wrap items-center mb-4 md:pt-2 justify-center">
+					{% for bot_element in site.data.bottomlinks %}
+					<li class="mx-8">
+						<a href="{{ bot_element.link }}" class="mr-8 hover:underline md:mr-6">{{ bot_element.name}} </a>
 					</li>
-					<li>
-						<a href="#" class="mr-4 hover:underline md:mr-6">Impressum</a>
-					</li>
-					<li>
-						<a href="#" class="mr-4 hover:underline md:mr-6">Datenschutz</a>
-					</li>
+					{% endfor %}
 				</ul>
 			</nav>
 			<div class="absolute h-64 w-3/4 bg-gradient-to-r from-fuchsia-700 to-fuchsia-900 bottom-0 right-0 "
