--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,8 +63,8 @@
 			<div class="absolute h-64 w-3/4 bottom-0 right-0">
 				<div class="relative pt-36 mr-4 float-right w-96">
 					{% for sm_element in site.data.bottomicons %}
-					<a href="{{ sm_element.url }} rel=" me">
-						<img src="{{ sm_element.logo }}" alt="{{ sm_element.name }}"
+					<a href="{{ sm_element[1].url }}" rel="me">
+						<img src="{{ sm_element[1].logo }}" alt="{{ sm_element[1].name }}"
 							class="w-12 mx-1 rounded-xl inline-block bg-white" />
 					</a>
 					{% endfor %}
