--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,9 +47,9 @@
 
 
 
-	<footer class="relative transform-none md:skew-y-6 -mt-28 bg-stone-900">
-		<div class="transform-none md:-skew-y-6">
-			<nav class=" mt-24 pt-8 bg-stone-900 text-stone-50 h-64">
+	<footer class="relative  -mt-52 bg-stone-900">
+		<div class="">
+			<nav class=" mt-24 pt-16 bg-stone-900 text-stone-50 h-72">
 				<ul class="flex flex-wrap items-center mb-4 md:pt-2 justify-center">
 					{% for bot_element in site.data.bottomlinks %}
 					<li class="mx-8 z-20">
