added bottom image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
 
 
 	<footer class="relative  -mt-52 bg-stone-900">
-		<div class="">
+
 			<nav class=" mt-24 pt-16 bg-stone-900 text-stone-50 h-72">
 				<ul class="flex flex-wrap items-center mb-4 md:pt-2 justify-center">
 					{% for bot_element in site.data.bottomlinks %}
@@ -71,7 +71,8 @@
 					{% endfor %}
 				</div>
 			</div>
-		</div>
+			<img class="absolute left-0 bottom-0 hidden md:block w-1/4" src="assets/images/bottom.png">
+
 	</footer>
 
 
