pushed portrait to the right and made it bigger

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,16 +30,13 @@
 				{% endfor %}
 			</ul>
 		</nav>
-		<header class="pb-12 max-w-xl pt-14 mx-auto text-center h-80 z-0 relative ">
-			<div class="grid grid-cols-2 place-content-between items-center mb-8 mt-2">
-				<h1 class="text-8xl text-center md:text-left mb-8">
-					FiNessi
-				</h1>
-				<div class="hidden md:flex ml-32 drop-shadow-2xl">
-					<img class="w-48 clipped" src="/assets/images/nessi.jpeg">
-				</div>
+
+		<header class="pb-12 w-full pt-6 mx-auto text-center h-80 z-0 relative">
+			<h1 class="text-[9rem] mb-8 text-center">FiNessi</h1>
+			<div class="hidden md:flex ml-32 drop-shadow-xl w-auto absolute right-6 top-6">
+				<img class="w-96 clipped" src="/assets/images/nessi.jpeg">
 			</div>
-			<h2 class="pt-12 text-3xl">{{ page.title }}</h2>
+			<h2 class="relative pt-12 text-5xl">{{ page.title }}</h2>
 		</header>
 	</div>
 
