--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,8 @@
 
 		<header class="pb-12 w-full pt-6 mx-auto text-center h-80 z-0 pointer-events-none relative">
 			<h1 class="text-[9rem] mb-8 text-center relative">FiNessi</h1>
-			<div class="hidden md:flex ml-32 drop-shadow-xl w-auto absolute right-6 top-6">
+			<div class="hidden md:flex ml-32 drop-shadow-xl w-auto absolute right-6 top-6"
+			     style="filter: drop-shadow(.5rem .5rem 1rem rgba(0,0,0,0.8));">
 				<img class="xl:w-96 lg:w-72 md:w-32 clipped" src="/assets/images/nessi.jpeg">
 			</div>
 			<h2 class="relative pt-12 text-5xl">{{ page.title }}</h2>
