--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="relative">
-	<button class="md:hidden block absolute top-2 right-2 w-8 aspect-square z-50 cursor-pointer" id="menuOpen">
+	<button class="md:hidden block absolute top-2 right-2 w-8 aspect-square z-50 cursor-pointer" id="menuOpen" aria-label="Menü anzeigen">
 		<svg xmlns="http://www.w3.org/2000/svg" class="relative"
 			viewBox="0 0 448 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
 			<path
@@ -37,7 +37,7 @@
 			</a>
 			{% endfor %}
 		</div>
-		<button class="absolute top-2 right-2 w-8 aspect-square hidden" id="menuClose">
+		<button class="absolute top-2 right-2 w-8 aspect-square hidden" id="menuClose" aria-label="Menü ausblenden">
 			<svg xmlns="http://www.w3.org/2000/svg" class="stroke-black"
 				viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
 				<path
@@ -66,7 +66,6 @@
 				style="filter: drop-shadow(.5rem .5rem 1rem rgba(0,0,0,0.8));">
 				<img class="xl:w-96 lg:w-72 md:w-32 clipped" src="/assets/images/nessi.jpeg">
 			</div>
-
 			<h2 class="relative pt-12 text-5xl">{{ page.title }}</h2>
 		</header>
 	</div>
