use downsized webp icons for socials in footer.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
 				{% for sm_element in site.data.bottomicons %}
 				<a href="{{ sm_element[1].url }}" rel="me">
 					<img src="{{ sm_element[1].logo }}" alt="{{ sm_element[1].name }}"
-						class="w-10 mx-1 rounded-xl inline-block aspect-square object-fit bg-white shadow-md shadow-stone-900" />
+						class="w-10 mx-1 rounded-xl inline-block aspect-square object-scale-down bg-white shadow-md shadow-stone-900" />
 				</a>
 				{% endfor %}
 			</div>
