use webp for bottom.png

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@
 				{% endfor %}
 			</div>
 		</div>
-		<img class="absolute left-0 bottom-0 hidden md:block w-1/4" src="assets/images/bottom.png">
+		<img class="absolute left-0 bottom-0 hidden md:block w-1/4" src="assets/images/bottom.webp">
 
 	</footer>
 
