use webp for head image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
 				style="-webkit-text-stroke: 3px black; text-stroke: 3px black;">FiNessi</h1>
 			<div class="hidden md:flex ml-32 drop-shadow-xl w-auto absolute right-6 top-6"
 				style="filter: drop-shadow(.5rem .5rem 1rem rgba(0,0,0,0.8));">
-				<img class="xl:w-96 lg:w-72 md:w-32 clipped" src="/assets/images/nessi.jpeg">
+				<img class="xl:w-96 lg:w-72 md:w-32 clipped" src="/assets/images/nessi.webp">
 			</div>
 			<h2 class="relative pt-12 text-5xl">{{ page.title }}</h2>
 		</header>
