add shadow to main-heading

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="relative">
-	{% include mobile_menu %}
+	{% include mobile_menu.html %}
 
 	<div class="relative">
 		<nav class="bg-gradient-to-r from-fuchsia-700 via-fuchsia-700 to-stone-900 text-white w-4/5 h-72 absolute top-0 left-0"
