adapt heading desing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,8 @@
 			</ul>
 		</nav>
 
-		<header class="pb-6 md:pb-12 w-full pt-6 mx-auto text-center h-80 z-0 pointer-events-none relative">
-			<h1 class="xl:text-[9rem] text-6xl md:text-8xl mb-8 text-center relative text-white"
-				style="-webkit-text-stroke: 3px black; text-stroke: 3px black;">FiNessi</h1>
+		<header class="pb-6 md:pb-12 w-full pt-20 md:pt-6 mx-auto text-center h-80 z-0 pointer-events-none relative">
+			<h1 class="xl:text-[9rem] text-8xl md:text-8xl md:mb-8 text-center relative text-white md:text-shadow-xl">FiNessi</h1>
 			<div class="hidden md:flex ml-32 drop-shadow-xl w-auto absolute right-6 top-6"
 				style="filter: drop-shadow(.5rem .5rem 1rem rgba(0,0,0,0.8));">
 				<img class="xl:w-96 lg:w-72 md:w-32 clipped" src="/assets/images/nessi.webp"
