--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,15 +8,20 @@
 :root {
     --corner-low: 35%;
     --corner-high: calc(100% - var(--corner-low));
-  }
-  .clipped {
-    clip-path: polygon(0% var(--corner-high),0% 0%,var(--corner-high) 0,100% var(--corner-low),100% 100%,var(--corner-low) 100%);
-  }
+}
 
-  section a:hover {
+.clipped {
+    clip-path: polygon(0% var(--corner-high),0% 0%,var(--corner-high) 0,100% var(--corner-low),100% 100%,var(--corner-low) 100%);
+}
+
+section a:hover {
     @apply text-fuchsia-400;
-  }
+}
 
 h1 {
-  text-shadow: black 5px 5px 2px;
+  -webkit-text-stroke: 3px black; text-stroke: 3px black;
+}
+
+h1, h2, h3, h4, h5 {
+  @apply font-['Impact']
 }
