--- a/_includes/mobile_menu.html
+++ b/_includes/mobile_menu.html
@@ -1,9 +1,5 @@
-<button class="md:hidden block absolute top-56 right-2 w-8 aspect-square z-50 cursor-pointer" id="menuOpen" aria-label="Menü anzeigen">
-    <svg xmlns="http://www.w3.org/2000/svg" class="relative"
-        viewBox="0 0 448 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-        <path
-            d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
-    </svg>
+<button aria-expanded="false" aria-controls="mobileMenu" class="md:hidden block absolute top-56 right-2 w-14 aspect-square z-50 cursor-pointer" id="menuOpen" aria-label="Menü anzeigen">
+    <img class="relative" src="assets/images/menu.webp">
 </button>
 
 <!-- mobile menu-->
@@ -16,7 +12,7 @@
         </a>
         {% endfor %}
     </div>
-    <button class="absolute top-2 right-2 w-8 aspect-square hidden" id="menuClose" aria-label="Menü ausblenden">
+    <button class="absolute top-3 right-3 w-12 aspect-square hidden" id="menuClose" aria-label="Menü ausblenden" aria-controls="mobileMenu" aria-expanded="false">
         <svg xmlns="http://www.w3.org/2000/svg" class="stroke-black"
             viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
             <path
