add impact as local font

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @font-face {
+    font-family: Impact;
+    font-weight: 400;
+    src: url("assets/fonts/impactreg.woff") format("woff");
+  }
+  @font-face {
+    font-family: Impact;
+    font-weight: 500;
+    src: url("assets/fonts/impactreg.woff") format("woff");
+  }
+}
+
 :root {
     --corner-low: 35%;
     --corner-high: calc(100% - var(--corner-low));
