--- a/_includes/mobile_menu.html
+++ b/_includes/mobile_menu.html
@@ -1,5 +1,5 @@
 <button aria-expanded="false" aria-controls="mobileMenu" class="md:hidden block absolute top-56 right-2 w-14 aspect-square z-50 cursor-pointer" id="menuOpen" aria-label="Menü anzeigen">
-    <img class="relative" src="assets/images/menu.webp">
+    <img class="relative" src="assets/images/menu.webp" alt="Menu button">
 </button>
 
 <!-- mobile menu-->
