--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,13 +9,13 @@
   @font-face {
     font-family: Impact;
     font-weight: 400;
-    src: url("../fonts/impactreg.woff") format("woff");
+    src: url("../font/impactreg.woff") format("woff");
     font-display: swap;
   }
   @font-face {
     font-family: Impact;
     font-weight: 500;
-    src: url("../fonts/impactreg.woff") format("woff");
+    src: url("../font/impactreg.woff") format("woff");
     font-display: swap;
   }
 }
