--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,16 +26,16 @@
 			style="clip-path: polygon(100% 0, 0 0, 0 100%);">
 			<ul class="hidden md:flex flex-wrap items-center mb-4 md:pt-2">
 				{% for nav_element in site.data.navlinks %}
-				<li class="mx-8">
-					<a href="{{ nav_element.link }}" class="mr-8 hover:underline md:mr-6 -z-10 font-['Arial']">{{
-						nav_element.name}} </a>
+				<li class="lg:mx-8 mx-6">
+					<a href="{{ nav_element.link }}" class="mr-8 hover:underline md:mr-6 -z-20 font-['Arial']">{{
+						nav_element.name }}</a>
 				</li>
 				{% endfor %}
 			</ul>
 		</nav>
 
-		<header class="pb-6 md:pb-12 w-full pt-20 md:pt-6 mx-auto text-center h-80 z-0 pointer-events-none relative">
-			<h1 class="xl:text-[9rem] text-8xl md:text-8xl md:mb-8 text-center relative text-white md:text-shadow-xl">FiNessi</h1>
+		<header class="pb-6 md:pb-12 w-full pt-24 md:pt-6 mx-auto text-center h-80 pointer-events-none relative">
+			<h1 class="xl:text-[9rem] text-8xl md:text-8xl md:mb-8 text-center relative z-10 text-white md:text-shadow-xl"><a class="hover:text-white" href="/">FiNessi</a></h1>
 			<div class="hidden md:flex ml-32 drop-shadow-xl w-auto absolute right-6 top-6"
 				style="filter: drop-shadow(.5rem .5rem 1rem rgba(0,0,0,0.8));">
 				<img class="xl:w-96 lg:w-72 md:w-32 clipped" src="/assets/images/nessi.webp"
@@ -54,7 +54,7 @@
 		<nav class=" mt-24 pt-16 bg-stone-900 text-stone-50 h-72">
 			<ul class="flex flex-wrap items-center mb-4 md:pt-2 justify-center">
 				{% for bot_element in site.data.bottomlinks %}
-				<li class="mx-8 z-20">
+				<li class="lg:mx-8 mx-6 z-20">
 					<a href='{{ bot_element.link }}' class="mr-8 hover:underline md:mr-6 font-['Arial']">{{
 						bot_element.name}} </a>
 				</li>
