add jekyll seo tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
 	<link rel="shortcut icon" href="/assets/favicons/favicon.ico">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
+
+	{% seo %}
 </head>
 
 <body class="relative">
