--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 		</nav>
 
 		<header class="pb-6 md:pb-12 w-full pt-24 md:pt-6 mx-auto text-center h-80 pointer-events-none relative">
-			<h1 class="xl:text-[9rem] text-8xl md:text-8xl md:mb-8 text-center relative z-10 text-white md:text-shadow-xl"><a class="hover:text-white" href="/">FiNessi</a></h1>
+			<h1 class="xl:text-[9rem] text-8xl md:text-8xl md:mb-8 text-center relative z-0 text-white md:text-shadow-xl">FiNessi</h1>
 			<div class="hidden md:flex ml-32 drop-shadow-xl w-auto absolute right-6 top-6"
 				style="filter: drop-shadow(.5rem .5rem 1rem rgba(0,0,0,0.8));">
 				<img class="xl:w-96 lg:w-72 md:w-32 clipped" src="/assets/images/nessi.webp"
@@ -51,23 +51,23 @@
 
 
 
-	<footer class="relative  -mt-52 bg-stone-900">
+	<footer class="relative -mt-52 bg-stone-900">
 
 		<nav class=" mt-24 pt-16 bg-stone-900 text-stone-50 h-72">
 			<ul class="flex flex-wrap items-center mb-4 md:pt-2 justify-center">
 				{% for bot_element in site.data.bottomlinks %}
-				<li class="lg:mx-8 mx-6 z-20">
+				<li class="lg:mx-8 mx-4 z-20">
 					<a href='{{ bot_element.link }}' class="mr-8 hover:underline md:mr-6 font-['Arial']">{{
 						bot_element.name}} </a>
 				</li>
 				{% endfor %}
 			</ul>
 		</nav>
-		<div class="absolute h-64 w-full bg-gradient-to-r from-fuchsia-700 to-fuchsia-900 bottom-0 right-0"
+		<div class="absolute h-72 w-full bg-gradient-to-r from-fuchsia-700 to-fuchsia-900 bottom-0 right-0"
 			style="clip-path: polygon(0% 70%,100% 20%,100% 100%,0% 100%);">
 		</div>
-		<div class="absolute h-64 w-3/4 bottom-0 right-0 z-10">
-			<div class="relative pt-36 mr-4 float-right w-96">
+		<div class="absolute h-72 w-3/4 bottom-0 right-0 z-10">
+			<div class="relative pt-48 md:pt-36 mr-4 float-right w-96">
 				{% for sm_element in site.data.bottomicons %}
 				<a href="{{ sm_element[1].url }}" rel="me">
 					<img src="{{ sm_element[1].logo }}" alt="{{ sm_element[1].name }}"
@@ -78,7 +78,6 @@
 		</div>
 		<img class="absolute left-0 bottom-0 hidden md:block w-1/4" src="assets/images/bottom.webp"
 			alt="Nessi mit einer Progess-Prideflag" />
-
 	</footer>
 
 	<script>
