fix bottom social icons paddings

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
 			style="clip-path: polygon(0% 70%,100% 20%,100% 100%,0% 100%);">
 		</div>
 		<div class="absolute h-72 w-3/4 bottom-0 right-0 z-10">
-			<div class="relative pt-48 md:pt-36 mr-4 float-right w-96">
+			<div class="relative pt-48 mr-4 float-right w-96">
 				{% for sm_element in site.data.bottomicons %}
 				<a href="{{ sm_element[1].url }}" rel="me">
 					<img src="{{ sm_element[1].logo }}" alt="{{ sm_element[1].name }}"
