--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 			<h1 class="xl:text-[9rem] text-8xl md:text-8xl md:mb-8 text-center relative z-0 text-white md:text-shadow-xl">FiNessi</h1>
 			<div class="hidden md:flex ml-32 drop-shadow-xl w-auto absolute right-6 top-6"
 				style="filter: drop-shadow(.5rem .5rem 1rem rgba(0,0,0,0.8));">
-				<img class="xl:w-96 lg:w-72 md:w-32 clipped" src="/assets/images/nessi.webp"
+				<img class="xl:w-96 lg:w-72 md:w-32 w-32 aspect-square clipped" src="/assets/images/nessi.webp"
 					alt="ein Portraitfoto von FiNessi" />
 			</div>
 			<h2 class="relative pt-12 text-5xl">{{ page.title }}</h2>
